--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=08yfhvK_KY8AX9bSsD8&oh=529e2ff69e05b996493a72e7eaebce18&oe=5E9F97EA" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=h27hW5sgdBMAX8HJ4Bz&oh=8dc945803a03929e73f7613ff819efbb&oe=5EA38C6A" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -152,7 +152,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=b2lVjTAm_-cAX9dFk_E&oh=06416ab4957689dbbd79e382ddb2ab34&oe=5EA29248" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=b2lVjTAm_-cAX9dFk_E&oh=1971121d522ed957d0d17c90678e26b5&oe=5EAFC148" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -162,7 +162,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=zfRsTBJUjzMAX8fNba1&oh=a9e0995bcbea01da51244ef2000ceb51&oe=5E9F1D64" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=zfRsTBJUjzMAX8fNba1&oh=d0238638fc8599a72b26948acbf0cdd4&oe=5EA311E4" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
@@ -172,7 +172,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=WcJdlHc0oooAX9FHat_&oh=284144fa02ebac654d5acff87ea4d361&oe=5E9F1A60" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=WcJdlHc0oooAX9FHat_&oh=0ed9ec3b0949e0f5fe8ecf59e00cf337&oe=5EA30EE0" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -182,17 +182,27 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=MjDB_rSufUIAX-_u1ZH&oh=e584af2959e3c3207956373a52fac8f7&oe=5EB2C4B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=P1kvtInZxzsAX_rj9-1&oh=d1b9d12b4e4dfd03cb2c804d643f6aea&oe=5EB2C4B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8_vrZ6ftiFQAX_oGkC1&oh=389c02482079c29e5dee999b4030231b&oe=5EA06DA9" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=H2b6pmMcr6cAX9uRZUc&oh=df79839e86e6263dc1ac1001f18bb05b&oe=5EA9874B" alt="Магазин женской одежды">
+									</div>
+									<div class="article-more__item-name" style="
+">Магазин женской одежды</div>
+								</a>
+								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DTvQXxjJcLQAX-zIV7Z&oh=8b89d718914c3bc9e8fde277359e728b&oe=5EB459B2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -206,16 +216,6 @@
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
-								</a>
-								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=AO4Iy8hmEIkAX8ZW8bK&oh=8f28ef01d46057a2ad624911d1be78f8&oe=5EA9874B" alt="Магазин женской одежды">
-									</div>
-									<div class="article-more__item-name" style="
-">Магазин женской одежды</div>
 								</a>
 							</div>
 						</div>
