--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=h27hW5sgdBMAX8HJ4Bz&oh=8dc945803a03929e73f7613ff819efbb&oe=5EA38C6A" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=h27hW5sgdBMAX_jbA9L&oh=580e687ac46e00d3abf939bbf9e7f8ac&oe=5EA38C6A" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -98,7 +98,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=loa4pL6la5MAX87r_R3&oh=c914d3f27568a43f06a3df2e3ed416ec&oe=5EA4C6F6" alt="">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=hj0dw9S4ABMAX8ns-nU&oh=63c2472cbe500d9488c6196b840d799e&oe=5EA4C6F6" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -107,7 +107,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Nv9VjssyLrYAX9DhAoB&oh=b1eb07d24dd4b34b5dd2a431840ca440&oe=5EA311E4" alt="РВШИ 2ой взвод">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Nv9VjssyLrYAX-y_WwN&oh=edca1f0554a6a5635fd009d00f09c69a&oe=5EA311E4" alt="РВШИ 2ой взвод">
 							</div>
 							<div class="article-more__item-name">РВШИ 2ой взвод</div>
 						</a>
@@ -116,7 +116,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=b2lVjTAm_-cAX9dFk_E&oh=b06fa1c62b2c75d995f9aff69779265f&oe=5EA468B8" alt="">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=9u8m1xgnR_QAX-mkMGA&oh=4eaf0fa0e840883b05875c6a47b72c6f&oe=5EA468B8" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -125,7 +125,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ycERLWb7lFoAX8EyPa8&oh=50267c9ff368f12c0ce85fc6aecea9dc&oe=5EA30EE0" alt="">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ycERLWb7lFoAX8XUpSb&oh=8e2f3de611a50ec15c71debc9a6a919a&oe=5EA30EE0" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -134,7 +134,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=P1kvtInZxzsAX_rj9-1&oh=1663b4e8887303d66c863fbb4f8b9e71&oe=5EA1654B" alt="Кухни">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=nP0Chvc6708AX_XFLaC&oh=f5a296a9d3ecccfdd169d460e4e89ec6&oe=5EA559CB" alt="Кухни">
 							</div>
 							<div class="article-more__item-name">Кухни</div>
 						</a>
@@ -143,7 +143,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DTvQXxjJcLQAX-zIV7Z&oh=a39413f07b6a763596497677993948b4&oe=5EA121CE" alt="">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DTvQXxjJcLQAX-8XdEC&oh=9fdd6268962251e750573a9eb7ba0ffb&oe=5EA5164E" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -152,7 +152,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FG3ODq8LILIAX9wkTwG&oh=76ea7a82d6590b2b4c686a2ad4a33b2c&oe=5EA4D9A2" alt="">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=3hqC4e0JujsAX_vNRC3&oh=efdc2544a16470350d21bf4ef030045e&oe=5EA4D9A2" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -161,7 +161,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=fljnJvdHsnkAX-4hIuQ&oh=6953d80c163b5a4ce51cac0d112cdb4d&oe=5EA46229" alt="">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=fljnJvdHsnkAX-93zTK&oh=a51bb3c0aaa98eee0f6a09c9038d4a97&oe=5EA46229" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
