--- a/stories.html
+++ b/stories.html
@@ -58,7 +58,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=h27hW5sgdBMAX8HJ4Bz&oh=8dc945803a03929e73f7613ff819efbb&oe=5EA38C6A" alt="Қайрат Нұрсағатов" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=h27hW5sgdBMAX_jbA9L&oh=580e687ac46e00d3abf939bbf9e7f8ac&oe=5EA38C6A" alt="Қайрат Нұрсағатов" /></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</div>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -105,7 +105,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B9HG5z2HH5t" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ycERLWb7lFoAX8EyPa8&oh=50267c9ff368f12c0ce85fc6aecea9dc&oe=5EA30EE0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ycERLWb7lFoAX8XUpSb&oh=8e2f3de611a50ec15c71debc9a6a919a&oe=5EA30EE0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -115,7 +115,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B9HFP5wHjRx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/84316456_138359887703369_970209819145869941_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=DXROJMvnAT0AX8ZWcw1&oh=aadbf622adf4f41be7a165ac5fef35e9&oe=5EA34ACC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/84316456_138359887703369_970209819145869941_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=DXROJMvnAT0AX_lYYSY&oh=ed8d5a4b91191741fcebf92015dad388&oe=5EA34ACC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -125,7 +125,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B8YWKAlnPrv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DTvQXxjJcLQAX-zIV7Z&oh=a39413f07b6a763596497677993948b4&oe=5EA121CE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DTvQXxjJcLQAX-8XdEC&oh=9fdd6268962251e750573a9eb7ba0ffb&oe=5EA5164E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -135,7 +135,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B8YWHkIHYUc" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=loa4pL6la5MAX87r_R3&oh=c914d3f27568a43f06a3df2e3ed416ec&oe=5EA4C6F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=hj0dw9S4ABMAX8ns-nU&oh=63c2472cbe500d9488c6196b840d799e&oe=5EA4C6F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -145,7 +145,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B8YVEuQnoXW" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FG3ODq8LILIAX9wkTwG&oh=76ea7a82d6590b2b4c686a2ad4a33b2c&oe=5EA4D9A2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=3hqC4e0JujsAX_vNRC3&oh=efdc2544a16470350d21bf4ef030045e&oe=5EA4D9A2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -155,7 +155,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6z25WRnleb" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=NQGmZVXr3OwAX87Z8hs&oh=c2680d6a114019265fcefa833c32dc46&oe=5EA38F5B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=NQGmZVXr3OwAX-PDmtv&oh=4c4a920213f7941c416dd090e8870c0b&oe=5EA38F5B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -165,7 +165,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6v_6N6nWD5" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FufVfiaTdbcAX8SBM8I&oh=07959f0e78471d76e862a496eb3479b6&oe=5EA4D4FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FufVfiaTdbcAX9Le64s&oh=74adf9a61581ff3702c70a8dc4ad6265&oe=5EA4D4FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -175,7 +175,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rvshi-2oy-vzvod" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Nv9VjssyLrYAX9DhAoB&oh=b1eb07d24dd4b34b5dd2a431840ca440&oe=5EA311E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Nv9VjssyLrYAX-y_WwN&oh=edca1f0554a6a5635fd009d00f09c69a&oe=5EA311E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -185,7 +185,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6XQlnGnymN" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=fljnJvdHsnkAX-4hIuQ&oh=6953d80c163b5a4ce51cac0d112cdb4d&oe=5EA46229" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=fljnJvdHsnkAX-93zTK&oh=a51bb3c0aaa98eee0f6a09c9038d4a97&oe=5EA46229" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -195,7 +195,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6VfhQuHFVw" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=b2lVjTAm_-cAX9dFk_E&oh=b06fa1c62b2c75d995f9aff69779265f&oe=5EA468B8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=9u8m1xgnR_QAX-mkMGA&oh=4eaf0fa0e840883b05875c6a47b72c6f&oe=5EA468B8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -205,7 +205,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="magazin-zhenskoy-odezhdy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=H2b6pmMcr6cAX9uRZUc&oh=ce3e3f0bd0598f2aead36a0dad5a9f23&oe=5EA40B35" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=H2b6pmMcr6cAX9A6Vsu&oh=b47ee48755b6e0dab44d146078f6ef4f&oe=5EA40B35" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -215,7 +215,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kukhni" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=P1kvtInZxzsAX_rj9-1&oh=1663b4e8887303d66c863fbb4f8b9e71&oe=5EA1654B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=nP0Chvc6708AX_XFLaC&oh=f5a296a9d3ecccfdd169d460e4e89ec6&oe=5EA559CB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -225,7 +225,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="garderobnye-komnaty-so-shkafami" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=NEDJILOSQhMAX84cd2K&oh=721ae93c6648e401cdfe17744f34bbf2&oe=5E7BEFB0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=NEDJILOSQhMAX-eR4gT&oh=77282b88dda5a5b53aca89ff88cd61ba&oe=5E7DE9F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -235,7 +235,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shakhmatshylar" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=xgNRDUIEZx0AX8396mZ&oh=d8466ccbe2617a30f2ab8ef1cc353d6e&oe=5EA39C07" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=xgNRDUIEZx0AX8Vfpcz&oh=cf76961c3b714b4c3fc2fefbb6ea2526&oe=5EA39C07" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -245,7 +245,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B2WrgpxFX-O" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=4FXemUFhVGsAX_AxmNT&oh=86985fa6d6b520568cf0e286b070ca7d&oe=5EA483DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=4FXemUFhVGsAX-FVhU_&oh=d4dc25ebcf845c0f01e7be211d2ac3a7&oe=5EA483DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -255,7 +255,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0MMcSFq5r" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=tQGia1noNtoAX__X2Dp&oh=ef43260f9bfdac4db0505bbd35b2afa0&oe=5EA49C60" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=tQGia1noNtoAX9lstbx&oh=6efdae21e394a4e24c9227c748cc4a83&oe=5EA49C60" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -265,7 +265,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0MLyulQuj" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Qhdiy79jI0cAX-A3M3X&oh=8ea93c994a864aca2c1aed5f396e3277&oe=5EA1BEC1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=a4jXNCYblSoAX8tNqCA&oh=5b184d6d35394bbf118922bbc8def76d&oe=5EA5B341" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -275,7 +275,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0K9HXl4eW" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Rvel0nGeV8UAX8tZHHh&oh=fda838a7779f22d8be29e5d2258595a5&oe=5EA16CA8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=PjEsUOYfTtMAX-kDfsZ&oh=b36bf8262b309743a0941789c53dea8e&oe=5EA56128" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
