--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=h27hW5sgdBMAX_jbA9L&oh=580e687ac46e00d3abf939bbf9e7f8ac&oe=5EA38C6A" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=Du52hw2xGxMAX8PMtzq&oh=1ea99369e2f6d419df149515095de09e&oe=5EA780EA" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -162,7 +162,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Nv9VjssyLrYAX-y_WwN&oh=edca1f0554a6a5635fd009d00f09c69a&oe=5EA311E4" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Nv9VjssyLrYAX-y_WwN&oh=cc14f381653825530735c28937d653e9&oe=5EA70664" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
@@ -172,7 +172,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ycERLWb7lFoAX8XUpSb&oh=8e2f3de611a50ec15c71debc9a6a919a&oe=5EA30EE0" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ycERLWb7lFoAX8XUpSb&oh=b71f471de93c3bc316d0f4fb20f56811&oe=5EA70360" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -187,6 +187,26 @@
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
+								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eR2u-ca31O0AX89bkVi&oh=1b9d231ef553cc52b739e245d5cda549&oe=5EA5164E" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
+								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=3hqC4e0JujsAX_vNRC3&oh=efdc2544a16470350d21bf4ef030045e&oe=5EA4D9A2" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
 								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -196,26 +216,6 @@
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
-								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DTvQXxjJcLQAX-8XdEC&oh=9fdd6268962251e750573a9eb7ba0ffb&oe=5EA5164E" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
-								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=H2b6pmMcr6cAX9A6Vsu&oh=b47ee48755b6e0dab44d146078f6ef4f&oe=5EA40B35" alt="Магазин женской одежды">
-									</div>
-									<div class="article-more__item-name" style="
-">Магазин женской одежды</div>
 								</a>
 							</div>
 						</div>
